...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_android" />

    <EditText
        android:id="@+id/id_nom"
        android:layout_width="354dp"
        android:layout_height="59dp"
        android:inputType="text"
        android:hint="Ingresa tu nombre, por favor"
        android:textAlignment="center"
        android:textColor="#41376D"
...
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811" />

    <Button
        android:id="@+id/b_sigam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Siguiente -> "
        android:textColor="#CAC3E6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
